[Extensions Sync] Don't apply sync data for unsyncable extensions

Some extensions are considered "unsyncable" - this includes extensions
that are installed by default (since we don't want to push them to
propogate everywhere). However, we weren't checking if an extension
was syncable before applying the sync data from the server. This meant
that it was possible to get into a bad state where, if a user has an
extension that is default installed on one machine, but not another, the
extension would be synced down, but never updated. In one case, this
can result in the extension always becoming disabled.

Fix this by checking for if an extension is syncable before applying
sync data, and add a couple of tests.

BUG=731824

Review-Url: https://codereview.chromium.org/2923013006
Cr-Commit-Position: refs/heads/master@{#479039}

Former-commit-id: 2f1ed4c9530785eab233370a9e8429451d987515